[project]
name = "deeplearningnlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "sacrebleu>=2.6.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
]
[tool.basedpyright]
typeCheckingMode = "off"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
]
